fix form & text align

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,7 +149,8 @@ legend {
 }
 
 .form__input {
-    width: 390px;
+    min-width: 350px;
+    max-width: 390px;
     border: 1px solid rgb(105, 105, 105);
     display: block;
     text-align: center;
@@ -172,6 +173,10 @@ legend {
     padding: 9px 36px;
     font-weight: bold;
     border-radius: 23px;
+}
+
+.description {
+    text-align: center;
 }
 
 .hidden {
